--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ PORT="3000"
 DATABASE_URL="mysql://root:password@localhost:3306/<nama database>"
 JWT_SECRET="RAHASIA_JWT"
 JWT_EXPIRES_IN="1d"
+APP_URL="http://localhost:3001"
 
 # This was inserted by `prisma init`:
 [object Promise]
